--- a/tables/candidate/ChangeLog
+++ b/tables/candidate/ChangeLog
@@ -1,2 +1,3 @@
 2004-05-07  Choe Hwanjin <krisna@kldp.org>
 	* start ChangeLog for hanja dictionary file
+	* add hanja-merge.py, hanja-gettext.py script
