--- a/tables/candidate/ChangeLog
+++ b/tables/candidate/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-16  Choe Hwanjin <krisna@kldp.org>
+	* nabi-symbol.txt, nabi.txt: http://micsland.com/phps/key.php 여기에
+	있는 표대로 심벌 문자 배치를 변경
+
 2004-05-07  Choe Hwanjin <krisna@kldp.org>
 	* start ChangeLog for hanja dictionary file
 	* add hanja-merge.py, hanja-gettext.py script
