--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -2,6 +2,7 @@
 	* ko이외에 ja_JP.UTF-8, zh_CN.UTF-8, zh_HK.UTF-8, zh_TW.UTF-8,
 	en_US.UTF-8을 지원하도록 함
 	* candidate list의 글꼴 설정 옵션도 설정창에 추가
+	* candidate list의 갯수를 9개로 변경
 
 2004-08-01  Choe Hwanjin <krisna@kldp.org>
 	* XIMPreeditArea 지원
