--- a/nabi/NEWS
+++ b/nabi/NEWS
@@ -1,3 +1,10 @@
+나비 0.14
+ * 설정창 제공
+ * java 프로그램에서 한글 입력을 더 자연스럽게 수정
+ * 한자/심벌 입력리스트에서 갯수를 9개로 수정
+ * 지원하지 않는 locale의 경우 워닝 출력
+ * en_US.UTF-8 locale에서도 한글 입력 지원
+
 나비 0.13
  * 세션기능 지원
  * 한자 입력시 뜻도 보여줌
