--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,3 +1,6 @@
+2004-08-30  Choe Hwanjin <krisna@kldp.org>
+	* Tux 테마 추가 (박준철님에게 감사드립니다)
+
 2004-08-28  Choe Hwanjin <krisna@kldp.org>
 	* release 0.14
 
