--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-10-04  Choe Hwanjin <krisna@kldp.org>
+	* compose table을 제대로 로딩하지 못하던 버그 수정
+
 2004-08-30  Choe Hwanjin <krisna@kldp.org>
 	* Tux 테마 추가 (박준철님에게 감사드립니다)
 
