* tray icon size 설정 옵션 제거  * size-allocate 시그널에서 아이콘 크기를 자동 조정
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@495 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-09  Choe Hwanjin <krisna@kldp.org>
+	* tray의 크기에 맞춰 size-allocate 시그널에서 자동으로 크기를 수정함
+	* 아이콘 크기 설정 옵션을 없앰
+
 2004-11-03  Choe Hwanjin <krisna@kldp.org>
 	* 키 입력 통계를 다른 창으로 띄움
 	* 하드코딩된 locale 스트링을 제거
