--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,5 +1,7 @@
 2004-11-21  Choe Hwanjin <krisna@kldp.org>
 	* 한영 전환키와 한자 키 설정을 보강
+	* 옛글 compose table 추가
+	* 순아래 자판 추가
 
 2004-11-09  Choe Hwanjin <krisna@kldp.org>
 	* tray의 크기에 맞춰 size-allocate 시그널에서 자동으로 크기를 수정함
